combine: `ui` into `main`

--- a/main/package.json
+++ b/main/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "main": "core/main.js",
   "scripts": {
+    "vite:dev": "cross-env NODE_ENV=dev vite --port 3000",
+    "vite:build": "cross-env NODE_ENV=production vite build",
+    "vite:github-build": "cross-env NODE_ENV=github vite build --mode github",
+    "vite:serve": "vite preview",
     "electron:dev": "cross-env NODE_ENV=dev electron .",
     "electron:build": "electron-builder",
     "electron:serve": "vite preview",
@@ -12,17 +16,23 @@
     "github-build": "npm-run-all -s vite:github-build electron:build"
   },
   "dependencies": {
-    "deskor-plugin-preload": "^0.0.1-alpha.2"
+    "deskor-plugin-preload": "^0.0.1-alpha.3",
+    "vue": "3.1.5"
   },
   "devDependencies": {
     "@babel/parser": "^7.22.7",
     "@babel/traverse": "^7.22.8",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/compiler-sfc": "3.1.5",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "electron": "^25.3.1",
-    "electron-acrylic-window": "^0.5.11",
     "electron-builder": "^24.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
+    "vitawind": "^2.2.4",
+    "vite": "^4.4.7"
   },
   "build": {
     "appId": "com.huibizhang.deskor",
